@@ -26,22 +26,12 @@
 
 #include "messagehandler.h"
 
-#include "../lockedarray.h"
-
-class LocalPlayer;
-class LoginData;
-
 class LoginHandler : public MessageHandler
 {
     public:
         LoginHandler();
 
         void handleMessage(MessageIn &msg);
-
-        void setLoginData(LoginData *loginData) { mLoginData = loginData; };
-
-    protected:
-        LoginData *mLoginData;
 };
 
 #endif
